--- a/system/src/main/resources/application.properties
+++ b/system/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 spring.application.name=system
-server.port=8082
+server.port=9001
+
+#将system注册到eureka中
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
