--- a/gateway/pom.xml
+++ b/gateway/pom.xml
@@ -10,16 +10,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.coursenew</groupId>
-    <artifactId>system</artifactId>
+    <artifactId>gateway</artifactId>
     <dependencies>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-        <!--添加eureka 客户端 服务jar-->
+        <!--gateway网关jar-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+            <artifactId>spring-cloud-starter-gateway</artifactId>
             <version>2.2.2.RELEASE</version>
         </dependency>
 
@@ -30,7 +26,6 @@
             <!-- 加上版本号就行了 -->
             <version>2.2.2.RELEASE</version>
         </dependency>
-
     </dependencies>
 
 
