新增gateway模块，注入到eureka中

--- a/gateway/src/main/resources/application.properties
+++ b/gateway/src/main/resources/application.properties
@@ -3,3 +3,18 @@ server.port=9000
 
 #将gateway注册到eureka中
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+
+#路由转发
+#系统模块转发
+spring.cloud.gateway.routes[0].id=system
+spring.cloud.gateway.routes[0].uri=http://127.0.0.1:9001
+spring.cloud.gateway.routes[0].predicates[0].name=Path
+spring.cloud.gateway.routes[0].predicates[0].args[0]=/system/**
+
+#业务模块转发
+spring.cloud.gateway.routes[1].id=business
+spring.cloud.gateway.routes[1].uri=http://127.0.0.1:9002
+#spring.cloud.gateway.routes[1].uri=lb://business
+spring.cloud.gateway.routes[1].predicates[0].name=Path
+spring.cloud.gateway.routes[1].predicates[0].args[0]=/business/**
+
