--- a/businessnew/pom.xml
+++ b/businessnew/pom.xml
@@ -10,17 +10,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.coursenew</groupId>
-    <artifactId>system</artifactId>
+    <artifactId>businessnew</artifactId>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-        <!--添加eureka 客户端 服务jar-->
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
-            <version>2.2.2.RELEASE</version>
         </dependency>
 
         <dependency>
@@ -31,15 +26,19 @@
             <version>2.2.2.RELEASE</version>
         </dependency>
 
+
         <!-- 集成mybatis-->
         <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
+            <version>2.1.3</version>
         </dependency>
+
         <!-- 集成mysql连接 -->
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.28</version>
         </dependency>
 
         <!--增加server模块-->
@@ -47,8 +46,6 @@
             <artifactId>server</artifactId>
             <groupId>com.coursenew</groupId>
         </dependency>
-
     </dependencies>
-
 
 </project>
