--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,8 @@
 		<module>eureka</module>
 		<module>system</module>
 		<module>gateway</module>
+		<module>server</module>
+		<module>businessnew</module>
 	</modules>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -39,7 +41,29 @@
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
+
+			<!-- 集成mybatis-->
+			<dependency>
+				<groupId>org.mybatis.spring.boot</groupId>
+				<artifactId>mybatis-spring-boot-starter</artifactId>
+				<version>2.1.3</version>
+			</dependency>
+			<!-- 集成mysql连接 -->
+			<dependency>
+				<groupId>mysql</groupId>
+				<artifactId>mysql-connector-java</artifactId>
+				<version>5.1.28</version>
+			</dependency>
+
+			<!--增加server模块-->
+			<dependency>
+				<artifactId>server</artifactId>
+				<groupId>com.coursenew</groupId>
+				<version>0.0.1-SNAPSHOT</version>
+			</dependency>
 		</dependencies>
+
+
 	</dependencyManagement>
 
 	<build>
@@ -47,6 +71,25 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+
+			<!-- mybatis generator 自动生成代码插件 -->
+			<plugin>
+				<groupId>org.mybatis.generator</groupId>
+				<artifactId>mybatis-generator-maven-plugin</artifactId>
+				<version>1.3.7</version>
+				<configuration>
+					<configurationFile>src/main/resources/generator/generatorConfig.xml</configurationFile>
+					<overwrite>true</overwrite>
+					<verbose>true</verbose>
+				</configuration>
+				<dependencies>
+					<dependency>
+						<groupId>mysql</groupId>
+						<artifactId>mysql-connector-java</artifactId>
+						<version>5.1.37</version>
+					</dependency>
+				</dependencies>
 			</plugin>
 		</plugins>
 	</build>
