--- a/server/pom.xml
+++ b/server/pom.xml
@@ -10,42 +10,44 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.coursenew</groupId>
-    <artifactId>system</artifactId>
+    <artifactId>server</artifactId>
+
     <dependencies>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-        <!--添加eureka 客户端 服务jar-->
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
-            <version>2.2.2.RELEASE</version>
-        </dependency>
 
+        <!--lombok的jar-->
         <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <!--eureka客户端-->
-            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
-            <!-- 加上版本号就行了 -->
-            <version>2.2.2.RELEASE</version>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.18</version>
         </dependency>
 
         <!-- 集成mybatis-->
         <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
+            <version>2.1.3</version>
         </dependency>
         <!-- 集成mysql连接 -->
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.28</version>
         </dependency>
 
-        <!--增加server模块-->
+        <!-- mybatis分页插件pagehelper -->
         <dependency>
-            <artifactId>server</artifactId>
-            <groupId>com.coursenew</groupId>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper-spring-boot-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper</artifactId>
+            <version>5.2.0</version>
         </dependency>
 
     </dependencies>
